<resources>
    <string name="app_name">My Application</string>
    <string name="loginNoAccount">Don\'t have an account? Signup</string>
    <string name="login">Login</string>
    <string name="category">Category</string>
    <string name="seeAll">See all</string>
    <string name="topDoc">Top Doctors</string>
    <string name="topdoc">Top Doctor</string>
    <string name="bannerName">Find a Doctor</string>
    <string name="docName1">Dr. Thisara Jayas</string>
    <string name="docName2">Dr. Lissa Dias</string>
    <string name="docName3">Dr. Kamal Perera</string>
    <string name="docName4">Dr. John Mendis</string>
    <string name="docName5">Dr. Jenny Silva</string>
    <string name="docName6">Dr. Mike Jayas</string>
    <string name="docName7">Dr. Hendry Jonas</string>
    <string name="docName8">Dr. Elis Fredric</string>
    <string name="MedCateegorOne">Heart Surgeon - United Hospital</string>
    <string name="MedCateegorTwo">Cardio Surgeon - Asiri Hospital</string>
    <string name="MedCateegorTree">Eye Surgeon - Lanka Hospital</string>
    <string name="MedCateegorFour">Brain Surgeon - Asiri Hospital</string>
    <string name="doctorTime">10.30 AM - 08.20 PM</string>
    <string name="doctorPrice">LKR 1,500</string>
    <string name="appointmentTxt">Appointment</string>
    <string name="categoryOne">Cardiologist</string>
    <string name="categoryTwo">Neurologist</string>
    <string name="categoryThree">Hematologist</string>
    <string name="categoryFour">Somnologist</string>
    <string name="categoryfive">Pulmonlogist</string>
    <string name="categorySix">Dentist</string>
    <string name="profile">Profile</string>
    <string name="profileName">Thisara Jayas</string>
    <string name="profileEmail">thisarasjay@gmail.com</string>
    <string name="profileFName">Thisara</string>
    <string name="profileLName">Jayas</string>
    <string name="profilePhone">+94 761207102</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="profileDOB">27/12/2002</string>
    <string name="profileBtn">Save Changes</string>
    <string name="profileChangeSuccess">Success!!</string>
    <string name="profileSuccessUpdate">Return Home</string>
    <string name="categories">Categories</string>
    <string name="notification">Notifications</string>
    <string name="notificationText1">Nothing Here!!</string>
    <string name="notificationSmallTxt">You\'re all caught up friend\nCome back latter :)</string>
    <string name="DocProfileTitle">Doctor Details</string>
    <string name="aboutTitle">About Doctor</string>
    <string name="docDescription">has experience in beating heart surgery in almost all patients, use of arterial grafts to get the best long term results for CABG, valve repairs and valve replacements. He has specialised in minimally invasive cardiac surgeries-minimally invasive valve repairs and replacements and MIDCABG multi-vessel bypass, emergency repair of aortic dissection, bentall procedures, aortic root widening, maze procedures, extended myomectomy, chest wall resection and reconstruction and cardiothoracic trauma.</string>
    <string name="DocTimeTitle">Available Time</string>
    <string name="bookDocAppoin">Book Appointment</string>
    <string name="signUp">Sign Up</string>
    <string name="regText">Register</string>
    <string name="fNameHint">First Name</string>
    <string name="lNameHint">Last Name</string>
    <string name="emailHint">Enter Email</string>
    <string name="numberHint">Phone Number</string>
    <string name="dobHint">dd/mm/year</string>
    <string name="passwordHint">Password</string>
    <string-array name="appointmentTime">
        <item>8:30AM - 9:00AM</item>
        <item>9:00AM - 9:30AM</item>
        <item>10:00AM - 10:30AM</item>
        <item>10:30AM - 11:00AM</item>
        <item>12:30PM - 01:00PM</item>
        <item>01:00PM - 01:30PM</item>
        <item>02:00PM - 02:30PM</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>