<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="675dp"
        tools:layout_editor_absoluteX="-126dp"
        tools:layout_editor_absoluteY="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/categoryBackbtn"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/baseline_arrow_back" />

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/notification"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView30"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/profile" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/notificationText1"
                android:textColor="@color/messageColor"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView8" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="271dp"
                android:layout_height="58dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/notificationSmallTxt"
                android:textAlignment="center"
                android:textColor="@color/messageColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView38" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="182dp"
                android:layout_height="166dp"
                android:layout_marginTop="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:srcCompat="@drawable/notification" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/secondaryColor"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/homeNav"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_home_24" />

        <ImageView
            android:id="@+id/medCategoryNav"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_medical_services_24" />

        <ImageView
            android:id="@+id/notifiNav"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_notifications_active_24" />

        <ImageView
            android:id="@+id/profileNav"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_person_24" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>